syntax = "proto3"; /* default is proto2 */
option java_package = "proto";


// ----------------------------------------------------
// Service symbolizing the Messenger interface
// ----------------------------------------------------
service Node {
  rpc FindSuccessorWIKI (FindSuccessorRequestWIKI) returns (FindSuccessorReplyWIKI) {}
  rpc NotifyWIKI (NotifyRequestWIKI) returns (NotifyReplyWIKI) {}
  rpc PingNodeWIKI (PingNodeRequestWIKI) returns (PingNodeReplyWIKI) {}
  rpc GetPredecessorWIKI (GetPredecessorRequestWIKI) returns (GetPredecessorReplyWIKI) {}
  rpc SetPredecessorsSuccessorWIKI (SetPredecessorsSuccessorRequestWIKI) returns (SetPredecessorsSuccessorReplyWIKI) {}
  rpc SetSuccessorsPredecessorWIKI (SetSuccessorsPredecessorRequestWIKI) returns (SetSuccessorsPredecessorReplyWIKI) {}
}

// ----------------------------------------------------
// Requests and replies definitions
// ----------------------------------------------------

// ----------------------------------------------------
message FindSuccessorRequestWIKI {
  uint64 id = 1;
}

message FindSuccessorReplyWIKI {
  ChordNode chordNode = 1;
}

// ----------------------------------------------------
message NotifyRequestWIKI {
  ChordNode chordNode = 1;
}

message NotifyReplyWIKI {

}

// ----------------------------------------------------
message PingNodeRequestWIKI {
  bool isAlive = 1;
}

message PingNodeReplyWIKI {
  bool isAlive = 1;
}

// ----------------------------------------------------
message GetPredecessorRequestWIKI {

}

message GetPredecessorReplyWIKI {
  ChordNode chordNode = 1;
}

// ----------------------------------------------------
message SetPredecessorsSuccessorRequestWIKI {
  ChordNode chordNode = 1;
}

message SetPredecessorsSuccessorReplyWIKI {
}
// ----------------------------------------------------
message SetSuccessorsPredecessorRequestWIKI {
  ChordNode chordNode = 1;
}

message SetSuccessorsPredecessorReplyWIKI {
}

// ----------------------------------------------------
// Chord messages
// ----------------------------------------------------
message ChordNode {
  string ip = 1;
  uint64 port = 2;
  uint64 identifier = 3;
  uint64 m = 4;
  ChordNode successor = 5;
  ChordNode predecessor = 6;
}